<resources>
    <string name="app_name">EnergyDrinkRecorderApp</string>
    <string name="navigation_bGoTo_newEntry">New entry</string>
    <string name="navigation_bGoTo_positionsData">All positions</string>
    <string name="navigation_bGoTo_manageEntries">Manage entries</string>
    <string name="statistics_tData_loading">Loading data...</string>
    <string name="statistics_bSwitch_total">Show total statistics</string>
    <string name="statistics_bMore">All entries</string>
    <string name="statistics_tData_daily_placeholder">Today:\n %s liters &amp; %s rub</string>
    <string name="statistics_tData_total_placeholder">All time:\n %s liters &amp; %s rub</string>
    <string name="statistics_tData_daily_noData">No entries by this day,\ngood job</string>
    <string name="statistics_tData_total_noData">Still no entries in DB,\nunderstandable</string>
    <string name="statistics_tData_failed">Failed to access data</string>
    <string name="entriesActivity_title">Entries</string>
    <string name="fragment_entryBar_noData">---</string>
    <string name="fragment_placeholder">placeholder</string>
    <string name="entriesList_date_failed">Failed to load date</string>
    <string name="entryBar_placeholder_id">id</string>
    <string name="entryBar_placeholder_name">name</string>
    <string name="entryBar_placeholder_volume">volume</string>
    <string name="entryBar_placeholder_price">price</string>
    <string name="entryBar_placeholder_count">count</string>
    <string name="positionBar_placeholder_id">id</string>
    <string name="positionBar_placeholder_name">name</string>
    <string name="positionBar_placeholder_volume">volume</string>
    <string name="positionBar_placeholder_price">price</string>
    <string name="activity_positions_title">Positions</string>
    <string name="newEntry_tEDName">ED name:</string>
    <string name="activity_newEntry_title">New Entry</string>
    <string name="newEntry_tCount">Count:</string>
    <string name="newEntry_bSubmit">Submit</string>
    <string name="newEntry_sVolume">Volume</string>
    <string name="newEntry_price">Price</string>
    <string name="newPosition_tName">ED name:</string>
    <string name="newPosition_volume">Volume:</string>
    <string name="newPosition_price">Price:</string>
    <string name="newPosition_submit">Submit</string>
    <string name="activity_newPosition_title">New Position</string>
    <string name="removeBar_tId">Id:</string>
    <string name="removeBar_bRemoveId">Remove id</string>
    <string name="removeBar_bClearAll">Clear all</string>
    <string name="toast_entries_clearAll_failed">Failed to remove all entries</string>
    <string name="toast_entries_removeId_fail">Failed to remove entry at current id</string>
    <string name="toast_entries_removeId_success">Entry removed successfully</string>
    <string name="toast_entries_removeAll_success">Entries removed successfully</string>
    <string name="toast_newEntry_success">Entry created successfully</string>
    <string name="toast_newEntry_fail">Incorrect data, failed to create entry</string>
    <string name="toast_newPosition_success">Position data added successfully</string>
    <string name="toast_newPosition_fail">Incorrect values, failed to add position data to DB</string>
    <string name="toast_positions_removeId_fail">Failed to remove position</string>
    <string name="toast_positions_removeAll_fail">Failed to remove all positions from DB</string>
    <string name="toast_positions_removeId_success">Position deleted successfully</string>
    <string name="toast_positions_removeAll_success">Positions DB cleaned successfully</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_text_removeAll">Do you really want to remove all positions? All entries data also would be wiped</string>
    <string name="dialog_decline">Decline</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_removeId_text">Do you really want to remove this position? All related entries would be wiped</string>
    <string name="statistics_bSwitch_daily">Show daily statistics</string>
    <string name="position_selector_name">Name</string>
    <string name="position_selector_volume">Volume</string>
    <string name="position_selector_price">Price</string>
    <string name="editEntry_tCount">Count</string>
    <string name="editEntry_tDate_fail">Failed to load date</string>
    <string name="editEntry_bSubmit">Submit</string>
    <string name="editEntry_title">Edit entry</string>
    <string name="main_title">Main menu</string>
    <string name="toast_editEntry_submit_fail_incorrectData">Failed to edit entry: invalid values</string>
    <string name="toast_editEntry_submit_fail_db">Failed to edit entry completely</string>
    <string name="toast_editEntry_submit_success">Edited successfully</string>
    <string name="removeBar_bEdit">Edit Id</string>
    <string name="toast_notImplemented">Not implemented, sorry</string>
    <string name="toast_entries_editId_fail_notFound">Id not found</string>
</resources>