<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/positionBar_id"
        android:text="@string/positionBar_placeholder_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/positionBar_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="0.5"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/positionBar_name"
        android:text="@string/positionBar_placeholder_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/positionBar_id"
        app:layout_constraintEnd_toStartOf="@id/positionBar_volume"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="2"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/positionBar_volume"
        android:text="@string/positionBar_placeholder_volume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/positionBar_name"
        app:layout_constraintEnd_toStartOf="@id/positionBar_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/positionBar_price"
        android:text="@string/positionBar_placeholder_price"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/positionBar_volume"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>