<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/statistics_tData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/statistics_tData_loading"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:minHeight="60dp"
        android:id="@+id/statistics_bSwitch"
        android:text="@string/statistics_bSwitch_total"
        app:layout_constraintEnd_toStartOf="@id/statistics_bMore"
        app:layout_constraintTop_toBottomOf="@id/statistics_tData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/statistics_bMore"
        android:text="@string/statistics_bMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/statistics_bSwitch"
        app:layout_constraintTop_toBottomOf="@id/statistics_tData"
        app:layout_constraintHorizontal_weight="1"/>


</androidx.constraintlayout.widget.ConstraintLayout>